@@ -8,6 +8,7 @@ Bug fixes:
 	* Fix build with system QXlsx (!693)
 	* Fix build with system qads 4.4 (!694)
 	* Crash on import when no projects opened (BUG 503800)
+	* Save rotation of axis title seperately for x and y axis
 
 -----2.12.0 (2025-04-25) -----
 New features:
